# [project]
# name = "hydra-ray-tune-sweeper"
# version = "0.1.0"
# description = "Add your description here"
# readme = "README.md"
# authors = [
#     { name = "Marco Christiani" }
# ]
# requires-python = ">=3.12.1"
# dependencies = []
#
# [project.scripts]
# hydra-ray-tune-sweeper = "hydra_ray_tune_sweeper:main"

[build-system]
requires = ["setuptools", "wheel", "read-version"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
